samples/_failures_safe/1761427505_a87c99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52facc3a.c: In function ‘main’:
./samples/SAFE/__tmp_52facc3a.c:173:16: error: missing terminating " character
  173 |         printf("Token
      |                ^~~~~~
./samples/SAFE/__tmp_52facc3a.c:173:9: error: expected expression at end of input
  173 |         printf("Token
      |         ^~~~~~
./samples/SAFE/__tmp_52facc3a.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52facc3a.c:173:9: error: expected declaration or statement at end of input
